Fix some flaws, hopefully